--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      content="width=device-width, initial-scale=1, shrink-to-fit=yes"
     />
     <meta name="theme-color" content="#000000" />
     <!--
@@ -37,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Material Kit React</title>
+    <title>NPC Hosting | India's only managed gameserver provider</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
